# WQ-DataEngine

./: CMakeLists.txt  README.md
doc/: DataEngine使用手册.md
inc/: DataEngine.h  DataParse.h  MongodbEngine.h  ToDocuments.h  WZDataEngine.h  WZMongodbEngine.h  dataparse.h  tsdatastruct.h
lib/: libWZMongodbEngine.so.1  libWZMongodbEngine.so.1.0  libWZMongodbEngine.so.1.1  libWZMongodbEngine.so.1.5  libmongodbengine.so.1.6
src/: CMakeLists.txt  MongodbEngine.cpp  WZMongodbEngine.cpp  mongodbengine.cpp
test/: CMakeLists.txt  data.csv  hu_gtest.cpp  li_gtest.cpp  luo_test.cpp  mongodbenginetest.cpp  parsetest.cpp  sort_test.cpp
